--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Paul Franz
 description: |
-  Video. Design. Web.
+  Geospatial. Motion. Web.
   Digital Storyteller.
 owner: Paul Franz # or company name
-first_published: 2017 # if migrating another site, the year of your first publish
+first_published: 2020 # if migrating another site, the year of your first publish
 email: paulkfranz@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.paul-franz.com" # the base hostname & protocol for your site
